# crispii_digits

./: Cargo.toml  README.md
src/: bin.rs  dec.rs  hex.rs  lib.rs  oct.rs
