[package]
name = "crispii_digits"
version = "0.1.2"
edition = "2024"
rust-version = "1.8.5"
description = "Digit enums intended for use in Crispii"
readme = "README.md"
repository = "https://github.com/stephen-paton/crispii_digits"
authors = ["Stephen Paton <69050696+stephen-paton@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
keywords = ["crispii", "digits"]
